# OxyTex

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  oxytex.cpp
src/textdetect/: CMakeLists.txt  craft_utils.cpp  craft_utils.hpp  detect.cpp  detect.hpp  imgproc.cpp  imgproc.hpp
